Actualizacion de 2019-1: main y practicos

--- a/2019-1/practicos/Practico3-2019.tex
+++ b/2019-1/practicos/Practico3-2019.tex
@@ -56,16 +56,16 @@
 
 \smallskip
 
-\item Hallar el cociente y el resto de la divisi\'on de:
+\item Hallar el cociente y el resto de la división de:
 
 \begin{multicols}{3}
 \begin{enumerate}
   \item $135$ por $23$,
 	\item $-135$ por $23$,
-	\item $153$ por $27$,
-  \item $-135$ por $27$,
+	\item $135$ por $-23$,
+  \item $-135$ por $-23$,
 	\item $127$ por $99$,
-	\item $-98$ por $73$.
+	\item $98$ por $73$.
 \end{enumerate}
 \end{multicols}
 
@@ -73,13 +73,13 @@
 
 \item 
 \begin{enumerate}
-  \item Si $a=b\cdot q+r$, con $b \le r <2 b$, hallar el cociente y el resto de la divisi\'on de $a$ por $b$.
+  \item Si $a=b\cdot q+r$, con $b \le r <2 b$, hallar el cociente y el resto de la división de $a$ por $b$.
   \item Repetir el ejercicio anterior, suponiendo ahora que $-b \le r < 0$.
 \end{enumerate}
 
 
 \smallskip
-\item Dado $m\in \mathbb N$ hallar los restos posibles de $m^2$ y $m^3$ en la division por $3,4,5,7,8, 11$.
+\item Dado $m\in \mathbb N$ hallar los restos posibles de $m^2$ y $m^3$ en la división por $3,4,5,7,8, 11$.
 
 \smallskip
 \item Expresar en base 10 los siguientes enteros:
@@ -114,11 +114,11 @@
 
 \item Sean $a$, $b$, $c \in {\mathbb Z}$. Demostrar las siguientes afirmaciones:
   \begin{enumerate}
-%  \item $\forall a$,\,\, $a \mid 0$. (En particular, $0 \mid 0$).
-%  \item $\forall a \neq 0$,\, $0 \not|\  a$.
-  \item Si $ab=1$, entonces \,$a=b=1$\, \'o \,$a=b=-1$.
-  \item Si $a,b \neq 0$,  $a| b$\, y \,$b | a$, entonces \,$a=b$\, \'o \,$a=-b$.
-  \item Si $a | 1$, entonces \,$a=1$\, \'o \,$a=-1$.
+  %\item $\forall a$,\,\, $a \mid 0$. (En particular, $0 \mid 0$).
+  %\item $\forall a \neq 0$,\, $0 \not|\  a$.
+  \item Si $ab=1$, entonces \,$a=b=1$\, ó \,$a=b=-1$.
+  \item Si $a,b \neq 0$,  $a| b$\, y \,$b | a$, entonces \,$a=b$\, ó \,$a=-b$.
+  \item Si $a | 1$, entonces \,$a=1$\, ó \,$a=-1$.
   \item Si $a \neq 0$, $a | b$\, y \,$a | c$, entonces \,$a | (b+c)$\, y \,$a | (b-c)$.
   \item Si $a \neq 0$, $a | b$\, y \,$a | (b+c)$, entonces \,$a | c$.
   \item Si $a \neq 0$\, y \,$a | b$, entonces \,$a| b\cdot c$.
@@ -129,16 +129,16 @@
 \item Dados $b,c$ enteros, probar las siguientes propiedades:
   \begin{enumerate}
   \item  $0$\, es par y $1$\, es impar.
-  \item  Si $b$ es par y \,$b \mid c$, entonces $c$ es par.  ( Por lo tanto, si $b$ es par, tambi\'en lo es $-b$).
-  \item  Si $b$ y $c$ son pares, entonces $b+c$ tambi\'en lo es. %(Por lo tanto, la suma de una cantidad cualquiera de n\'umeros pares es par).
-  \item  Si un n\'umero par divide a 2, entonces ese n\'umero es 2\, \'o \,$-2$.
-  \item  La suma de un n\'umero par y uno impar es impar.
+  \item  Si $b$ es par y \,$b \mid c$, entonces $c$ es par.  (Por lo tanto, si $b$ es par, también lo es $-b$).
+  \item  Si $b$ y $c$ son pares, entonces $b+c$ también lo es. %(Por lo tanto, la suma de una cantidad cualquiera de números pares es par).
+  \item  Si un número par divide a 2, entonces ese número es 2\, ó \,$-2$.
+  \item  La suma de un número par y uno impar es impar.
   \item $b + c$ es par si y  sólo si $b$ y $c$ son ambos pares o ambos impares.
 \end{enumerate}
 
 \smallskip
 
-\item Sea $n\in \mathbb Z$. Probar que $n$ es par si y s\'olo si $n^2$ es par.
+\item Sea $n\in \mathbb Z$. Probar que $n$ es par si y sólo si $n^2$ es par.
 
 \smallskip
 
@@ -146,10 +146,10 @@
 
 \smallskip
 
-\item Sean $a$, $b$, $c \in {\mathbb Z}$. ¿Cu\'ales de las siguientes afirmaciones son verdaderas? Justificar las respuestas.
+\item Sean $a$, $b$, $c \in {\mathbb Z}$. ¿Cuáles de las siguientes afirmaciones son verdaderas? Justificar las respuestas.
   \begin{enumerate}
-  \item $a \mid b\cdot c \Rightarrow a \mid b$\, \'o \,$a \mid c$.
-  \item $a \mid (b+c) \Rightarrow a\mid b$\, \'o \,$a \mid c$.
+  \item $a \mid b\cdot c \Rightarrow a \mid b$\, ó \,$a \mid c$.
+  \item $a \mid (b+c) \Rightarrow a\mid b$\, ó \,$a \mid c$.
   \item $a \mid c$\, y \,$b \mid c \Rightarrow a\cdot b \mid c$.
   \item $a \mid c$\, y \,$b \mid c$ $\Rightarrow (a +b) \mid c$.
   \item $a$, $b$, $c>0$\, y \,$a=b\cdot c$, entonces\, $a \ge b$ y $a \ge c$.
@@ -160,7 +160,7 @@
 
 \item Probar que cualquiera sea $n \in {\mathbb N}$:
   \begin{enumerate}
-  \item $3^{2n+2}+ 2^{6n+1}$ es m\'ultiplo de 11.
+  \item $3^{2n+2}+ 2^{6n+1}$ es múltiplo de 11.
   \item $3^{2n+2} - 8n - 9$\, es divisible por 64.
   \end{enumerate}
 
@@ -168,9 +168,9 @@
 
 \item Decir si es verdadero o falso justificando:
   \begin{enumerate}
-  \item $3^n+1$\, es m\'ultiplo de $n$, $\forall n \in {\mathbb N}$.
-  \item $3n^2+1$\, es m\'ultiplo de 2, $\forall n \in {\mathbb N}$.
-  \item $(n+1)\cdot (5n+2)$\, es m\'ultiplo de 2, $\forall n \in {\mathbb N}$.
+  \item $3^n+1$\, es múltiplo de $n$, $\forall n \in {\mathbb N}$.
+  \item $3n^2+1$\, es múltiplo de 2, $\forall n \in {\mathbb N}$.
+  \item $(n+1)\cdot (5n+2)$\, es múltiplo de 2, $\forall n \in {\mathbb N}$.
   \end{enumerate}
 
 \smallskip
@@ -179,24 +179,19 @@
 
 
 \smallskip
-\item Probar que todo entero impar que no es m\'ultiplo de 3, es de la forma $6m\pm 1$, con $m$ entero.
+\item Probar que todo entero impar que no es múltiplo de 3, es de la forma $6m\pm 1$, con $m$ entero.
 
 \smallskip
 
 \item 
 \begin{enumerate}
  \item Probar que el producto de tres enteros consecutivos es divisible por 6.
- \item Probar que el producto de cuatro enteros consecutivos es divisible por 24.
+ \item Probar que el producto de cuatro enteros consecutivos es divisible por 24 (ayuda: el número combinatorio $\binom{n}{4}$ es entero).
 \end{enumerate}
 
-\smallskip
-
-\item Si $a\cdot b$ es un cuadrado y $a$ y $b$ son coprimos, probar que $a$ y $b$ son cuadrados.
 
 \smallskip
-
-\smallskip
-\item Probar que si $a$ y $b$ son enteros entonces $a^2+b^2$ es divisible por 7 si y s\'olo si $a$ y $b$ son divisibles por 7.
+\item Probar que si $a$ y $b$ son enteros entonces $a^2+b^2$ es divisible por 7 si y sólo si $a$ y $b$ son divisibles por 7.
 ¿Es lo mismo cierto para 3? ¿Para 5?
 
 \smallskip
@@ -207,29 +202,19 @@
 \smallskip
 
 \item
-Calcular el m\'aximo com\'un divisor y expresarlo como combinaci\'on lineal de los
-n\'umeros dados, para cada uno de  los siguientes pares de n\'umeros:
+Calcular el máximo común divisor y expresarlo como combinación lineal de los
+números dados, para cada uno de  los siguientes pares de números:
 \begin{multicols}{3}
 \begin{enumerate}
   \item  14 y 35, 
 	\item 11 y 15, 
 	\item 12 y 52,
-  \item 12 y $-52$  
-	\item 12 y 532.
+  \item 12 y $-52$,  
+	\item 12 y 532,
+	\item 725 y 441,
+	\item 606 y 108.
 \end{enumerate}
 \end{multicols}
-
-\smallskip
-
-\item Mostrar que 725 y 441 son coprimos y encontrar enteros $m,n$ tales que $ m\cdot 725+ n\cdot 441= 1$.
-
-
-\item Dado un entero $a$, $a\neq 0$, hallar $(0,a)$.
-
-\smallskip
-
- \item Calcular el m\'aximo com\'un divisor entre 606 y 108 y
- expresarlo como combinaci\'on lineal de esos n\'umeros.
 
 
 
@@ -250,22 +235,10 @@ n\'umeros dados, para cada uno de  los siguientes pares de n\'umeros:
 
 \smallskip
 
-\item Probar que si $n \in {\mathbb Z}$, entonces los n\'umeros $2n+1$ y $\dfrac{n(n+1)}{2}$ son coprimos.
+\item Probar que si $n \in {\mathbb Z}$, entonces los números $2n+1$ y $\dfrac{n(n+1)}{2}$ son coprimos.
 
 \smallskip
 
-
-\item Calcular el m\'\i nimo com\'un m\'ultiplo de los siguientes pares de n\'umeros% dados en el Ejercicio 1.
-\begin{multicols}{3}
-\begin{enumerate}
-  \item $a=12$ y $b=15$. 
-	\item$a=11$ y $b=13$.
-	\item $a=140$ y $b=150$.
-  \item $a=3^2 \cdot 5^2$ y $b=2^2 \cdot 11$.
-	\item $a=2^2 \cdot 3\cdot 5$ y $b=2\cdot 5\cdot 7$.
-\end{enumerate}
-\end{multicols}
-\smallskip
 
 
 \item Encontrar todos los enteros positivos $a$ y $b$ tales que $(a,b)=10$ y $[a,b]=100$.
@@ -280,20 +253,37 @@ n\'umeros dados, para cada uno de  los siguientes pares de n\'umeros:
 
 \smallskip
 
-\item Probar que 3  y 5 son n\'umeros primos.
+\item Probar que 3  y 5 son números primos.
 
 \smallskip
 
-\item Determinar cu\'ales de los siguientes n\'umeros son primos: 113, 123, 131, 151, 199, 503.
+\item  Dar todos los números primos positivos menores que 100.
 
 \smallskip
 
-\item  Dar todos los n\'umeros primos positivos menores que 100.
+\item Determinar con el criterio de la raíz  cuáles de los siguientes números son primos: 113, 123, 131, 151, 199, 503.
 
 \smallskip
-\item Probar que si $p_k$ es el $k$-\'esimo primo positivo entonces
+
+\item Si $a\cdot b$ es un cuadrado y $a$ y $b$ son coprimos, probar que $a$ y $b$ son cuadrados.
+
+\smallskip
+\item Probar que si $p_k$ es el $k$-ésimo primo positivo entonces
 $$p_{k+1}\leq p_1\cdot p_2\cdot \cdots \cdot p_k+1$$
 
+\smallskip
+
+
+\item Calcular el máximo común divisor y el mínimo común múltiplo de los siguientes pares de números usando la descomposición en números primos. 
+\begin{multicols}{3}
+	\begin{enumerate}
+		\item $a=12$ y $b=15$. 
+		\item$a=11$ y $b=13$.
+		\item $a=140$ y $b=150$.
+		\item $a=3^2 \cdot 5^2$ y $b=2^2 \cdot 11$.
+		\item $a=2^2 \cdot 3\cdot 5$ y $b=2\cdot 5\cdot 7$.
+	\end{enumerate}
+\end{multicols}
 
 
 \end{enumerate}
