--- a/2019-1/practicos/Practico5-2019.tex
+++ b/2019-1/practicos/Practico5-2019.tex
@@ -378,7 +378,7 @@ $\delta (v)=\delta (\alpha (v)) \;\;\forall\,\; v \in V$.
 	\item ?`Puede afirmarlo si $|V|=3$ ó 4?.
 \end{enumerate}
 
-\medskip
+
 
 \item Encuentre una función del grafo $A$ al $B$ que preserve valencias. ?`Es un isomorfismo?.
 
@@ -423,14 +423,13 @@ $\delta (v)=\delta (\alpha (v)) \;\;\forall\,\; v \in V$.
 \end{tabular}
 
 
-\medskip
 
 \item Pruebe que si $G$ es un grafo con más de un vértice, entonces
 existen dos vértices con la misma valencia.
 
 
 
-\item
+\item Si $G=(V,E)$ grafo,  el \textit{grafo complemento}  es $G' = (V,E')$, donde $E'$ son todos los 2-subconjuntos de $V$ que no están en $E$. Es decir, el grafo complemento tiene los mismos vértices que el grafo original y todas las aristas que le faltan a $G$ para ser grafo completo. 
 \begin{enumerate}
 	\item  Halle el complemento de los siguientes grafos:
 	
@@ -662,6 +661,7 @@ Dados los siguientes grafos:
 \end{tabular}
 \end{enumerate}
 
+\begin{comment}
 \medskip
 
 
@@ -682,7 +682,10 @@ Determine todos los puentes en $A$ y $B$.
 
 
 \end{enumerate}
-\end{document}
+\end{comment}
+
+
+
 \medskip
 
 \item Dado el siguiente grafo
