--- a/2019-2/practicos/Practico1-2019.tex
+++ b/2019-2/practicos/Practico1-2019.tex
@@ -48,16 +48,14 @@
 
 
 
-{\bf \begin{center} Práctico 1 \\ Matemática Discreta I -- Año 2019/1 \\ FAMAF \end{center}}
+{\bf \begin{center} Práctico 1 \\ Matemática Discreta I -- Año 2019/2 \\ FAMAF \end{center}}
 
 \smallskip
 
 \begin{enumerate}
 
 
-\item\label{prob1} Demostrar las siguientes afirmaciones
-donde $a$, $b$, $c$ y $d$ son siempre n\'umeros enteros.\\
-Justificar cada uno de los pasos en cada demostraci\'on indicando el axioma o resultado que utiliza.
+\item\label{prob1} Demostrar las siguientes afirmaciones donde $a$, $b$, $c$ y $d$ son siempre números enteros. Justificar cada uno de los pasos en cada demostración indicando el axioma o resultado que utiliza.
 \begin{enumerate}
 \item  $a=-(-a)$
 \item  $a=b\,$ si y sólo si $\,-a=-b$
@@ -78,7 +76,8 @@ Justificar cada uno de los pasos en cada demostraci\'on indicando el axioma o re
 
 \item  Probar las siguientes afirmaciones, justificando los pasos que realiza.
 \begin{enumerate}
-  \item Si $0 < a$  y $\,0<b\,$ entonces $\,a<b\,$ si y s\'olo si $a^2<b^2$.
+  \item Si $0 < a$  y $\,0<b\,$ entonces $\,a<b\,$ si y sólo si $a^2<b^2$.
+  \item Si $a\neq 0$  entonces $a^2>0$.
   \item Si $a\neq b$  entonces $a^2+b^2>0$.
   \item Probar que si $a+c <b+c$ entonces $a<b$.
 \end{enumerate}
@@ -91,9 +90,14 @@ Probar que $u_n=2^n+1$.
 
 \smallskip
 
-\item Sea $\{ u_n \}_{n \in \mathbb N}$ la sucesi\' on definida
-por recurrencia como sigue: $u_1 = 9$, $u_2 = 33$, $u_k = 7u_{k-1} - 10u_{k-2}$, $\forall k \geq 3$.
-Probar que $u_n = 2^{n+1} + 5^n$, para todo $n \in \mathbb N$.
+\item Sea $\{ u_n \}_{n \in \mathbb N}$ la sucesión definida por recurrencia como sigue: $u_1 = 9$, $u_2 = 33$, $u_n = 7u_{n-1} - 10u_{n-2}$, $\forall n \geq 3$. Probar que $u_n = 2^{n+1} + 5^n$, para todo $n \in \mathbb N$.
+
+
+
+\smallskip
+
+\item Probar que $\sum_{i=0}^n 2^i = 2^{n+1} -1$ ($n \ge 0$). 
+
 
 \smallskip
 
@@ -106,10 +110,10 @@ Probar que $u_n = 2^{n+1} + 5^n$, para todo $n \in \mathbb N$.
 
 \smallskip
 
-\item Probar las siguientes afirmaciones usando inducci\'on en $n$:
+\item Probar las siguientes afirmaciones usando inducción en $n$:
 \begin{enumerate}
 \item $n^2\leq 2^n$ para todo $n\in{\mathbb N}$, $n>3$ .
-\item $n^3 \le 3^n$;\quad $\forall n \in {\mathbb N}$, $n\ge 3$ .
+%\item $n^3 \le 3^n$;\quad $\forall n \in {\mathbb N}$, $n\ge 3$ .
 %\item $(n+1)^n < n^{n+1}$; $\forall n \in {\mathbb N}$, $n \ge 3$.
 \item $\forall n \in {\mathbb N}$,\ $3^n \ge 1 + 2^n$.
 \end{enumerate}
@@ -147,16 +151,6 @@ Probar que $u_n = 2^{n+1} + 5^n$, para todo $n \in \mathbb N$.
 
 \smallskip
 
-\item Probar que:
-\begin{multicols}{3}
- \begin{enumerate}
-\item \quad $4^5>5^4$
-\item \quad $8^9>9^8$
-\item \quad $2^6 - 2^3  = 7^2 + 7$
-\end{enumerate}
-\end{multicols}
-
-
 
 
 
@@ -185,7 +179,7 @@ Probar que $u_n = 2^{n+1} + 5^n$, para todo $n \in \mathbb N$.
 \smallskip
 
 
-\item Demostrar por inducci\'on  las siguientes igualdades:
+\item Demostrar por inducción  las siguientes igualdades:
   \begin{enumerate}
   \item  $\displaystyle{ \sum_{k=1}^n (a_k + b_k) = \sum_{k=1}^n a_k + \sum_{k=1}^n b_k}$, $n\in \mathbb N$.
   \item  $\displaystyle{ \sum_{j=1}^n j = \frac{n(n+1)}{2}}$, $n\in \mathbb N$, $n\in \mathbb N$.
@@ -220,7 +214,7 @@ Probar que $u_n = 2^{n+1} + 5^n$, para todo $n \in \mathbb N$.
 \smallskip
 
 
-\item Las siguientes proposiciones no son v\'alidas para todo $n \in {\mathbb N}$. Indicar en qu\'e paso del principio de inducci\'on falla la demostraci\'on:
+\item Las siguientes proposiciones no son válidas para todo $n \in {\mathbb N}$. Indicar en qué paso del principio de inducción falla la demostración:
 \begin{multicols}{4}
 \begin{enumerate}
 \item  $n=n^2$,
@@ -232,28 +226,28 @@ Probar que $u_n = 2^{n+1} + 5^n$, para todo $n \in \mathbb N$.
 
 \smallskip
 
-\item Encuentre el error en los siguientes argumentos de inducci\'on.
+\item Encuentre el error en los siguientes argumentos de inducción.
 \begin{enumerate}
-\item  Demostraremos que $5n+3$ es m\'ultiplo de 5 para todo $n\in \mathbb N$.
+\item  Demostraremos que $5n+3$ es múltiplo de 5 para todo $n\in \mathbb N$.
 
-Supongamos que $5k+3$ es m\'ultiplo de 5, siendo $k\in \mathbb N$. Entonces existe
-$p\in \mathbb N$ tal que  $5k+3=5p$. Probemos que $5(k+1)+3$ es m\'ultiplo de 5:
+Supongamos que $5k+3$ es múltiplo de 5, siendo $k\in \mathbb N$. Entonces existe
+$p\in \mathbb N$ tal que  $5k+3=5p$. Probemos que $5(k+1)+3$ es múltiplo de 5:
 Como
 $$
 5(k+1)+3=(5k+5)+3=(5k+3)+5=5p+5=5(p+1),
 $$
-entonces obtenemos que $5(k+1)+3$ es m\'ultiplo de 5. Por lo tanto, por el principio
-de inducci\'on, demostramos que $5n+3$ es m\'ultiplo de 5 para todo $n\in \mathbb
+entonces obtenemos que $5(k+1)+3$ es múltiplo de 5. Por lo tanto, por el principio
+de inducción, demostramos que $5n+3$ es múltiplo de 5 para todo $n\in \mathbb
 N$.
 
 \smallskip
 
 \item Sea $a\in\mathbb R$, con $a\neq 0$. Vamos a demostrar que para todo entero no negativo $n$, $a^n=1$.
 
-Como $a^0=1$ por definici\'on, la proposici\'on es verdadera para $n=0$. Supongamos
+Como $a^0=1$ por definición, la proposición es verdadera para $n=0$. Supongamos
 que para  un entero $k$, $a^m=1$ para $0\leq m \leq k$. Entonces
 $a^{k+1}= \frac{a^k a^k}{a^{k-1}}=\frac{1\cdot1}1=1$.
-Por lo tanto, el principio de inducci\'on fuerte implica que $a^n=1$ para todo $n\in \mathbb N$.
+Por lo tanto, el principio de inducción fuerte implica que $a^n=1$ para todo $n\in \mathbb N$.
 \end{enumerate}
 
 
