--- a/2019-2/practicos/Practico2-2019.tex
+++ b/2019-2/practicos/Practico2-2019.tex
@@ -46,7 +46,7 @@
 
 \begin{document}
 
-{\bf \begin{center} Práctico 2 \\ Matemática Discreta I -- Año 2019/1 \\ FAMAF \end{center}}
+{\bf \begin{center} Práctico 2 \\ Matemática Discreta I -- Año 2019/2 \\ FAMAF \end{center}}
 
 \smallskip
 
@@ -56,48 +56,48 @@
 
 %\
 
-\item La cantidad de d\'\i gitos o cifras de un n\'umero se cuenta a partir del primer d\'\i gito distinto de cero. Por ejemplo, $0035010$ es un n\'umero de $5$ d\'\i gitos.
+\item La cantidad de dígitos o cifras de un número se cuenta a partir del primer dígito distinto de cero. Por ejemplo, $0035010$ es un número de $5$ dígitos.
 \begin{enumerate}
-\item ¿Cu\'antos n\'umeros de 5 d\'\i gitos hay?
-\item ¿Cu\'antos n\'umeros pares de 5 d\'\i gitos  hay?
-\item ¿Cu\'antos n\'umeros de 5 d\'\i gitos existen con s\'olo un 3?
-\item ¿Cu\'antos n\'umeros capic\'uas de 5 d\'\i gitos existen?
-\item ¿Cu\'antos n\'umeros capic\'uas de a lo sumo 5 d\'\i gitos hay?
+\item ¿Cuántos números de 5 dígitos hay?
+\item ¿Cuántos números pares de 5 dígitos  hay?
+\item ¿Cuántos números de 5 dígitos existen con sólo un 3?
+\item ¿Cuántos números capicúas de 5 dígitos existen?
+\item ¿Cuántos números capicúas de a lo sumo 5 dígitos hay?
 \end{enumerate}
 
 \smallskip
 
-\item ¿Cu\'antos n\'umeros de 6 cifras pueden formarse con los d\'\i gitos de 112200?
+\item ¿Cuántos números de 6 cifras pueden formarse con los dígitos de 112200?
 
 \smallskip
 
-\item ¿Cu\'antos n\'umeros impares de cuatro cifras hay?
+\item ¿Cuántos números impares de cuatro cifras hay?
 
 \smallskip
 
-\item ¿Cu\'antos n\'umeros m\'ultiplos de  5 y menores que 4999 hay?
+\item ¿Cuántos números múltiplos de  5 y menores que 4999 hay?
 
 \smallskip
 
-\item En los boletos viejos de \'omnibus, aparec\'\i a un {\em n\'umero} de 5 cifras (en este caso pod\'\i an empezar con 0), y uno ten\'\i a un {\it boleto capic\'ua} si el n\'umero lo era.
+\item En los boletos viejos de ómnibus, aparecía un {\em número} de 5 cifras (en este caso podían empezar con 0), y uno tenía un {\it boleto capicúa} si el número lo era.
 \begin{enumerate}
-\item ¿Cu\'antos boletos capic\'uas hab\'\i a?
-\item ¿Cu\'antos boletos hab\'\i a en los cuales no hubiera ning\'un d\'\i gito repetido?
+\item ¿Cuántos boletos capicúas había?
+\item ¿Cuántos boletos había en los cuales no hubiera ningún dígito repetido?
 \end{enumerate}
 
 \smallskip
 
-\item Las antiguas patentes de auto ten\'\i an una letra indicativa de la provincia y luego 6 d\'\i gitos. (En algunas provincias, Bs. As. y Capital, ten\'\i an 7 d\'\i gitos, pero ignoremos eso por el momento). Las nuevas patentes tienen 3 letras y luego 3 d\'\i gitos. ¿Con cu\'al de los dos criterios pueden formarse m\'as patentes?
+\item Las antiguas patentes de auto tenían una letra indicativa de la provincia y luego 6 dígitos. (En algunas provincias, Bs. As. y Capital, tenían 7 dígitos, pero ignoremos eso por el momento). Luego  vinieron patentes que tienen 3 letras y luego 3 dígitos. Finalmente, ahora las patentes tienen 2 letras, luego 3 dígitos y a continuación dos letras más ¿Cuántas patentes pueden hacerse con cada uno de los sistemas?
 
 \smallskip
 
-\item Si uno tiene 8 CD distintos de Rock, 7 CD distintos de m\'usica cl\'asica y 5 CD distintos de cuartetos,
+\item Si uno tiene 8 CD distintos de Rock, 7 CD distintos de música clásica y 5 CD distintos de cuartetos,
 \begin{enumerate}
-	\item ¿Cu\'antas formas distintas hay de seleccionar un CD?
+	\item ¿Cuántas formas distintas hay de seleccionar un CD?
 
-	\item ¿Cu\'antas formas hay de seleccionar tres CD, uno de cada tipo?
+	\item ¿Cuántas formas hay de seleccionar tres CD, uno de cada tipo?
 
-	\item Un sonidista en una fiesta de casamientos planea poner 3 CD, uno a continuaci\'on de otro. ¿Cu\'antas formas distintas tiene de hacerlo si le han dicho que no mezcle m\'as de dos estilos?
+	\item Un sonidista en una fiesta de casamientos planea poner 3 CD, uno a continuación de otro. ¿Cuántas formas distintas tiene de hacerlo si le han dicho que no mezcle más de dos estilos?
 \end{enumerate}
 
 \smallskip
@@ -106,49 +106,49 @@
 
 \smallskip
 
-\item ¿Cu\'antos enteros entre 1 y 10000 tienen exactamente un 7 y exactamente un 5 entre sus cifras?
+\item ¿Cuántos enteros entre 1 y 10000 tienen exactamente un 7 y exactamente un 5 entre sus cifras?
 
 \smallskip
 
-\item ¿Cu\'antos subconjuntos de $\{0,1,2,\dots,8,9\}$ contienen al menos un impar?
+\item ¿Cuántos subconjuntos de $\{0,1,2,\dots,8,9\}$ contienen al menos un impar?
 
 \smallskip
 
-\item El truco se juega con un mazo de 40 cartas, y se reparten 3 cartas a cada jugador. Obtener el 1 de espadas (el {\it macho}) es muy bueno. Tambi\'en lo es, por otros motivos, obtener un 7 y un 6 del mismo palo ({\it tener 33}). ¿Qu\'e es m\'as probable: obtener el macho, o tener 33?
+\item El truco se juega con un mazo de 40 cartas, y se reparten 3 cartas a cada jugador. Obtener el 1 de espadas (el {\it macho}) es muy bueno. También lo es, por otros motivos, obtener un 7 y un 6 del mismo palo ({\it tener 33}). ¿Qué es más probable: obtener el macho, o tener 33?
 
 \smallskip
 
-\item ¿Cu\'antos comit\'es pueden formarse de un conjunto de 6 mujeres y 4 hombres, si el comit\'e debe estar compuesto por 3 mujeres y 2 hombres?
+\item ¿Cuántos comités pueden formarse de un conjunto de 6 mujeres y 4 hombres, si el comité debe estar compuesto por 3 mujeres y 2 hombres?
 
 \smallskip
 
-\item ¿De cu\'antas formas puede formarse un comit\'e de 5 personas tomadas de un grupo de 11 personas entre las cuales hay 4 profesores y 7 estudiantes, si:
+\item ¿De cuántas formas puede formarse un comité de 5 personas tomadas de un grupo de 11 personas entre las cuales hay 4 profesores y 7 estudiantes, si:
 \begin{enumerate}
-	\item No hay restricciones en la selecci\'on?
+	\item No hay restricciones en la selección?
 
-	\item El comit\'e debe tener exactamente 2 profesores?
+	\item El comité debe tener exactamente 2 profesores?
 
-	\item El comit\'e debe tener al menos 3 profesores?
+	\item El comité debe tener al menos 3 profesores?
 
-	\item El profesor $X$ y el estudiante $Y$ no pueden estar juntos en el comit\'e?
+	\item El profesor $X$ y el estudiante $Y$ no pueden estar juntos en el comité?
 \end{enumerate}
 
 \smallskip
 
-\item Si en un torneo de f\'utbol participan $2n$ equipos, probar que el n\'umero total de opciones posibles para la primera fecha es $1\cdot 3\cdot 5 \cdot \dots \cdot (2n - 1)$. sugerencia: use un argumento por inducción. 
+\item Si en un torneo de fútbol participan $2n$ equipos, probar que el número total de opciones posibles para la primera fecha es $1\cdot 3\cdot 5 \cdots (2n - 1)$. sugerencia: use un argumento por inducción. 
 
 \smallskip
 
-\item En una clase hay $n$ chicas y $n$ chicos. Dar el n\'umero de maneras de ubicarlos en una fila de modo que todas las chicas est\'en juntas.
+\item En una clase hay $n$ chicas y $n$ chicos. Dar el número de maneras de ubicarlos en una fila de modo que todas las chicas estén juntas.
 
 \smallskip
 
-\item ¿De cu\'antas maneras  distintas pueden sentarse 8 personas en una mesa circular?
+\item ¿De cuántas maneras  distintas pueden sentarse 8 personas en una mesa circular?
 
 \smallskip
 
 \item \begin{enumerate}
-	\item ¿De cu\'antas maneras distintas pueden sentarse 6 hombres y 6 mujeres en una mesa circular si nunca deben quedar dos mujeres juntas?
+	\item ¿De cuántas maneras distintas pueden sentarse 6 hombres y 6 mujeres en una mesa circular si nunca deben quedar dos mujeres juntas?
 	\item \'Idem, pero con 10 hombres y 7 mujeres.
 \end{enumerate}
 
@@ -156,9 +156,9 @@
 
 \item 
 \begin{enumerate}
-	\item  ¿De cu\'antas formas distintas pueden ordenarse las letras de la palabra MATEMATICA
+	\item  ¿De cuántas formas distintas pueden ordenarse las letras de la palabra MATEMATICA
 	\item \'Idem con las palabras ALGEBRA, GEOMETRIA.
-	\item ¿De cu\'antas formas distintas pueden ordenarse las letras de la palabra MATEMATICA si se pide que las consonantes y las vocales se alternen?
+	\item ¿De cuántas formas distintas pueden ordenarse las letras de la palabra MATEMATICA si se pide que las consonantes y las vocales se alternen?
 \end{enumerate}
 
 \smallskip
@@ -168,12 +168,17 @@
 \smallskip
 
 \item Dados $m$, $n$ y $k$ naturales tales que $m \le k \le n$, probar que se verifica
-\[ \binom{n}{k}\binom{k}{m} = \binom{n}{m}\binom{n-m}{k-m}.\]
+\begin{equation*}
+	\binom{n}{k}\binom{k}{m} = \binom{n}{m}\binom{n-m}{k-m}.
+\end{equation*}
+
 
 \smallskip
 
 \item Probar que para todo $i$, $j$, $k \in {\mathbb N}_0$ vale
-\[ \binom{i + j + k}{i}\binom{j+k}{j} = \frac{(i+j+k)!}{i!j!k!}\]
+\begin{equation*}
+	\binom{i + j + k}{i}\binom{j+k}{j} = \frac{(i+j+k)!}{i!j!k!}
+\end{equation*}
 
 \smallskip
 
@@ -186,24 +191,28 @@
 
 \smallskip
 
-\item Probar que para todo natural $n$ vale que \[\binom{2n}{2} = 2 \binom{n}{2} + n^2.\]
+\item Probar que para todo natural $n$ vale que 
+\begin{equation*}
+	\binom{2n}{2} = 2 \binom{n}{2} + n^2.
+\end{equation*}
+
 
 \smallskip
 
 
 
 \item Con $20$ socios de un club se desea formar $5$ listas electorales (disjuntas).
-Cada lista consta de $1$ Presidente, $1$ Tesorero y $2$ vocales.  ¿De cu\'antas
+Cada lista consta de $1$ Presidente, $1$ Tesorero y $2$ vocales.  ¿De cuántas
 formas puede hacerse?
 
 \smallskip
 
-\item ¿De cu\'antas formas se pueden fotografiar $7$ matrimonios en una hilera,
+\item ¿De cuántas formas se pueden fotografiar $7$ matrimonios en una hilera,
 de tal forma que cada hombre aparezca al lado de su esposa?
 
 \smallskip
 
-\item ¿De cu\'antas formas pueden distribuirse $14$ libros distintos entre dos
+\item ¿De cuántas formas pueden distribuirse $14$ libros distintos entre dos
 personas de manera tal que cada persona reciba al menos $3$ libros?
 \end{enumerate}
 \end{document}
