--- a/2019-2/practicos/Practico5-2019-soluciones.tex
+++ b/2019-2/practicos/Practico5-2019-soluciones.tex
@@ -192,7 +192,7 @@
 
 \begin{document}
 	
-	{\bf \begin{center} Práctico 5 \\ Matemática Discreta I -- Año 2019 \\ FAMAF \end{center}}
+	{\bf \begin{center} Práctico 5 \\ Matemática Discreta I -- Año 2019/2 \\ FAMAF \end{center}}
 	
 	\medskip
 	
@@ -201,7 +201,7 @@
 	
 	\begin{enumerate}
 		
-		\item  ¿Cuántas aristas tiene el  grafo completo $K_n$? ¿Para cuáles valores de $n$ se puede encontrar un dibujo de $K_n$ con la propiedad que las líneas representan las aristas sin cruzarse?
+		\item \label{ej-kn} ¿Cuántas aristas tiene el  grafo completo $K_n$? ¿Para cuáles valores de $n$ se puede encontrar un dibujo de $K_n$ con la propiedad que las líneas representan las aristas sin cruzarse?
 		
 		\rta En un grafo  completo de $n$ vértices podemos contar las aristas de la siguiente manera: del primer vértice salen $n-1$ aristas, del segundo salen $n-2$ pues no debemos contar la arista al primer vértice, del tercer vértice salen $n-3$ aristas (no contamos la que van al primero y al segundo), y así sucesivamente. Concluyendo, la cantidad de aristas es 
 		\begin{equation*}
@@ -316,23 +316,123 @@ Sin embargo, no hay forma de dibujar $K_5$ sin cruces entre las aristas. La demo
 		\item
 		\begin{enumerate}
 			\item Encuentre todos los grafos de 5 vértices y 2 aristas no isomorfos entre sí.
+			
+			\rta Hay 2 posibilidades 1) las dos aristas no se tocan, 2)  las dos aristas se tocan en un punto. Es decir las aristas son 1)  $\{v,v'\},\{w,w'\} $ o 2) $\{v,v'\},\{v',w'\}$, donde $v,v',w,w'$ son todos distintos. Luego  hay solo dos grafos no isomorfos entre sí. Dibujándolos son:
+			\vskip .3cm
+			
+			\begin{center}
+				\begin{tikzpicture}[scale=1]
+				\SetVertexSimple[Shape=circle, FillColor=white,MinSize=8 pt]
+				\SetVertexNoLabel
+				\Vertex[x=0,y=0]{A}
+				\Vertex[x=1,y=0]{B}
+				\Vertex[x=2,y=0]{C}
+				\Vertex[x=3,y=0]{D}
+				\Vertex[x=4,y=0]{E}
+				%
+				\Edges(A,B)
+	
+				
+				\Vertex[x=7,y=0]{A}
+				\Vertex[x=8,y=0]{B}
+				\Vertex[x=9,y=0]{C}
+				\Vertex[x=10,y=0]{D}
+				\Vertex[x=11,y=0]{E}
+				%
+				\Edges(A,B,C)
+				\end{tikzpicture}
+			\end{center}
+			
+				\vskip .3cm
+				
 			\item ¿Cuál es el máximo número de aristas que puede tener un grafo de 5 vértices?
+			
+			\rta El grafo  completo $K_5$ es el que tiene todas las aristas posibles y estas son $5 \cdot 4 / 2 = 10$ (ver ejercicio \ref{ej-kn}). 
 		\end{enumerate}
 		
 		\medskip
 		
 		\item Para cada una de las siguientes secuencias, encuentre un grafo que tenga exactamente las valencias indicadas o demuestre que tal grafo no existe:
-		\begin{multicols}{3}
+		
 			\begin{enumerate}
 				\item $3,3,1,1$
+				
+				\rta Como la suma de valencias $3+3+1+1 = 8$, el grafo debe tener 4 aristas. Como hay 4 vértices y dos de ellos tienen valencia 3, digamos $a$ y $b$, de esos vértices salen aristas que llegan a todos los otros vértices. Es decir tenemos la siguiente situación:
+				
+				\begin{center}
+					\begin{tikzpicture}[scale=1]
+					%\SetVertexSimple[Shape=circle, FillColor=white,MinSize=8 pt]
+					%\SetVertexNoLabel
+					\Vertex[x=0,y=0]{$a$}
+					\Vertex[x=2,y=0]{$b$}
+					\Vertex[x=2,y=-2]{$c$}
+					\Vertex[x=0,y=-2]{$d$}
+					
+					%
+					\Edges($a$,$b$,$a$,$c$,$a$,$d$)
+					\Edges($b$,$c$,$b$,$d$)
+					
+					\end{tikzpicture}
+				\end{center}
+				
+				Por lo tanto, los dos vértices restantes tiene valencia $\ge 2$, lo cual nos dice que no puede haber un grafo con valencias $3,3,1,1$.
+				
 				\item $3,2,2,1$
+				
+				\rta  Un grafo que cumple con esa secuencia es:
+				
+					\begin{center}
+					\begin{tikzpicture}[scale=1]
+					\SetVertexSimple[Shape=circle, FillColor=white]
+					\SetVertexNoLabel
+					\Vertex[x=0,y=0]{$a$}
+					\Vertex[x=2,y=0]{$b$}
+					\Vertex[x=2,y=-2]{$c$}
+					\Vertex[x=0,y=-2]{$d$}
+					
+					%
+					\Edges($a$,$b$,$a$,$c$,$a$,$d$)
+					\Edges($b$,$d$)
+					
+					\end{tikzpicture}
+				\end{center}
+				
 				\item $3,3,2,2,1,1$
+				
+				\rta El grafo  tiene 6 vértices y $12/2 = 6$ aristas:
+				\vskip .3cm
+				\begin{center}
+					\begin{tikzpicture}[scale=0.65]
+					\SetVertexSimple[Shape=circle,FillColor=white]
+					%
+					\Vertex[x=3.00, y=0.00]{1}
+					\Vertex[x=1.50, y=2.60]{2}
+					\Vertex[x=-1.50, y=2.60]{3}
+					\Vertex[x=-3.00, y=0.00]{4}
+					\Vertex[x=-1.50, y=-2.60]{5}
+					\Vertex[x=1.50, y=-2.60]{6}
+					\Edges(1,2,3,4,1)
+					\Edges(1,4) \Edges(3,5) \Edges(2,6)
+					\end{tikzpicture}
+				\end{center}
+				
+				
 				\item $4,1,1,1,1$
-				\item $7,3,3,3,2,2$
+				
+				\rta  El grafo  tiene 5 vértices y $8/2 = 4$ aristas. El único grafo posible es el cual desde un vértice salen 4 aristas a los otros vértices.
+				
+				\item $7,3,3,3,2,2$ 
+				
+				\rta El grafo tendría 6 vértices, por lo tanto la valencia máxima podría ser 5 y es imposible que uno de los vértices tenga valencia 7.
+				
 				\item $4,1,1,1$
+				
+				\rta Como la suma de las valencias $4+1+1+1 =7$ es impar, no existe un grafo con esas valencias.  
 			\end{enumerate}
-		\end{multicols}
+
 		
+		
+
 		\medskip
 		
 
@@ -369,7 +469,7 @@ Sin embargo, no hay forma de dibujar $K_5$ sin cruces entre las aristas. La demo
 	\end{tikzpicture}
 \end{tabular}
 
-
+\rta Si mandamos, en orden, los puntos del rombo a los puntos del cuadrado y el punto del centro al punto exterior al cuadrado obtenemos un isomorfismo. 
 
 \begin{tabular}{ll}
 	${}^{}$ \qquad &
@@ -409,17 +509,204 @@ Sin embargo, no hay forma de dibujar $K_5$ sin cruces entre las aristas. La demo
 	\end{tikzpicture}
 \end{tabular}
 
-
+\rta Observar que el primer grafo es un cubo. Si en el segundo  grafo ``levantamos'' el cuadrado del  centro, podemos deformar ese grafo a un cubo.
 
 
 \medskip
 
-\item Sean $G=(V,E)$ y $G^{\prime}=(V^{\prime},E^{\prime})$ dos grafos y sea $\alpha :V \mapsto V^{\prime}$ una función tal que $\delta (v)=\delta (\alpha (v)) \;\;\forall\,\; v \in V$.
+\item Sean $G=(V,E)$ y $G^{\prime}=(V^{\prime},E^{\prime})$ dos grafos y sea $\alpha :V \mapsto V^{\prime}$ una función biyectiva  tal que $\delta (v)=\delta (\alpha (v)) \;\;\forall\,\; v \in V$.
 \begin{enumerate}
 	\item ¿Puede afirmar que $\alpha $ es un isomorfismo?.
+	
+	\rta No. Los grafos 
+	\begin{center}
+		\begin{tabular}{llll}
+			&
+			\begin{tikzpicture}[scale=1]
+			\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+			\Vertex[x=0.00, y=2.00]{a}
+			\Vertex[x=2., y=-1.50]{b}
+			\Vertex[x=-2., y=-1.50]{c}
+			\Edges(a,b,c,a)
+			\Vertex[x=0.00, y=0.85]{1}
+			\Vertex[x=1., y=-0.9]{2}
+			\Vertex[x=-1., y=-0.9]{3}
+			\Edges(1,2,3,1)
+			\Edges(a,1,3,c,b,2)
+			\end{tikzpicture}
+			&
+			\qquad
+			& 
+			\begin{tikzpicture}[scale=0.65]
+			\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+			%
+			\Vertex[x=3.00, y=0.00]{1}
+			\Vertex[x=1.50, y=2.60]{2}
+			\Vertex[x=-1.50, y=2.60]{3}
+			\Vertex[x=-3.00, y=0.00]{4}
+			\Vertex[x=-1.50, y=-2.60]{5}
+			\Vertex[x=1.50, y=-2.60]{6}
+			\Edges(1,2,3,4,5,6,1)
+			\Edges(1,4) \Edges(3,6) \Edges(2,5)
+			\end{tikzpicture}
+		\end{tabular}
+	\end{center}
+	son regulares de valencia 3 y no son isomorfos: el primero tiene 3-ciclos y el segundo no. 
 	\item ¿Puede afirmarlo si $|V|=3$ ó 4?.
+	
+	\rta Si $|V|=3$, los únicos grafos posibles son 
+	\begin{center}
+		\begin{tabular}{lllllll}
+			\begin{tikzpicture}[scale=0.8]
+			\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+			\Vertex[x=0, y=0]{a}
+			\Vertex[x=1, y=0]{b}
+			\Vertex[x=2, y=0]{c}
+			\end{tikzpicture}
+			&\qquad\qquad
+			&
+			\begin{tikzpicture}[scale=0.8]
+			\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+			\Vertex[x=0, y=0]{a}
+			\Vertex[x=1, y=0]{b}
+			\Vertex[x=2, y=0]{c}
+			\Edges(a,b)
+			\end{tikzpicture}
+			&\qquad\qquad
+			&
+			\begin{tikzpicture}[scale=0.8]
+			\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+			\Vertex[x=0, y=0]{a}
+			\Vertex[x=1, y=0]{b}
+			\Vertex[x=2, y=0]{c}
+			\Edges(a,b,c)
+			\end{tikzpicture}
+			&\qquad\qquad
+			& 
+			\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+			\begin{tikzpicture}[scale=0.8]
+			\Vertex[x=0, y=0]{a}
+			\Vertex[x=1, y=0]{b}
+			\Vertex[x=2, y=0]{c}
+			\Edges(a,b,c)
+			\Edge[style={bend left}](a)(c)
+			\end{tikzpicture}
+		\end{tabular}
+	\end{center}
+	La lista de valencias de estos grafos es $[0,0,0]$, $[1,1,0]$, $[1,1,2]$ y $[2,2,2]$, respectivamente. Por lo tanto, la lista de valencias determinan el grafo.
+	
+	\vskip .3cm
+	
+	En  el caso que  $|V|=4$ tenemos un solo grafo sin aristas, un solo grafo con una arista y  si seguimos agregando aristas podemos ver que hay 2 grafos con 2 aristas, 3 grafos con 3 aristas, 2 grafos con 4 aristas, un grafo con 5 aristas y un grafo con 6 aristas. Estos grafos son: 
+	\begin{center}
+		\begin{tabular}{l}
+			$0 \to $ \hskip 0.5cm
+			\begin{tikzpicture}[scale=0.8]
+			\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+			\Vertex[x=0, y=0]{a}
+			\Vertex[x=1, y=0]{b}
+			\Vertex[x=1, y=1]{c}
+			\Vertex[x=0, y=1]{d}
+			\end{tikzpicture}
+			\hskip 0.5cm$1 \to $ \hskip 0.5cm
+			\begin{tikzpicture}[scale=0.8]
+			\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+			\Vertex[x=0, y=0]{a}
+			\Vertex[x=1, y=0]{b}
+			\Vertex[x=1, y=1]{c}
+			\Vertex[x=0, y=1]{d}
+			\Edges(a,b)
+			\end{tikzpicture}
+			\\
+			\\
+			$2 \to $	\hskip 0.5cm
+			\begin{tikzpicture}[scale=0.8]
+			\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+			\Vertex[x=0, y=0]{a}
+			\Vertex[x=1, y=0]{b}
+			\Vertex[x=1, y=1]{c}
+			\Vertex[x=0, y=1]{d}
+			\Edges(a,b,c)
+			\end{tikzpicture}
+			\hskip 0.5cm\begin{tikzpicture}[scale=0.8]
+			\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+			\Vertex[x=0, y=0]{a}
+			\Vertex[x=1, y=0]{b}
+			\Vertex[x=1, y=1]{c}
+			\Vertex[x=0, y=1]{d}
+			\Edges(a,b)
+			\Edges(c,d)
+			\end{tikzpicture}
+			\\
+			\\
+			$3 \to $	\hskip 0.5cm
+			\begin{tikzpicture}[scale=0.8]
+			\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+			\Vertex[x=0, y=0]{a}
+			\Vertex[x=1, y=0]{b}
+			\Vertex[x=1, y=1]{c}
+			\Vertex[x=0, y=1]{d}
+			\Edges(a,b,c,a)
+			\end{tikzpicture}
+			\hskip 0.5cm\begin{tikzpicture}[scale=0.8]
+			\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+			\Vertex[x=0, y=0]{a}
+			\Vertex[x=1, y=0]{b}
+			\Vertex[x=1, y=1]{c}
+			\Vertex[x=0, y=1]{d}
+			\Edges(a,b,c,b,d)
+			\end{tikzpicture}
+			\hskip 0.5cm\begin{tikzpicture}[scale=0.8]
+			\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+			\Vertex[x=0, y=0]{a}
+			\Vertex[x=1, y=0]{b}
+			\Vertex[x=1, y=1]{c}
+			\Vertex[x=0, y=1]{d}
+			\Edges(a,b,c,d)
+			\end{tikzpicture}
+			\\
+			\\
+			$4 \to $	\hskip 0.5cm
+			\begin{tikzpicture}[scale=0.8]
+			\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+			\Vertex[x=0, y=0]{a}
+			\Vertex[x=1, y=0]{b}
+			\Vertex[x=1, y=1]{c}
+			\Vertex[x=0, y=1]{d}
+			\Edges(a,b,c,a,d)
+			\end{tikzpicture}
+			\hskip 0.5cm\begin{tikzpicture}[scale=0.8]
+			\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+			\Vertex[x=0, y=0]{a}
+			\Vertex[x=1, y=0]{b}
+			\Vertex[x=1, y=1]{c}
+			\Vertex[x=0, y=1]{d}
+			\Edges(a,b,c,d,a)
+			\end{tikzpicture}
+			\\
+			\\
+			$5 \to $ \hskip 0.5cm
+			\begin{tikzpicture}[scale=0.8]
+			\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+			\Vertex[x=0, y=0]{a}
+			\Vertex[x=1, y=0]{b}
+			\Vertex[x=1, y=1]{c}
+			\Vertex[x=0, y=1]{d}
+			\Edges(a,b,c,d,a,c)
+			\end{tikzpicture}
+			\hskip 0.5cm$6 \to $ \hskip 0.5cm
+			\begin{tikzpicture}[scale=0.8]
+			\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+			\Vertex[x=0, y=0]{a}
+			\Vertex[x=1, y=0]{b}
+			\Vertex[x=1, y=1]{c}
+			\Vertex[x=0, y=1]{d}
+			\Edges(a,b,c,d,a,c,b,d)
+			\end{tikzpicture}
+		\end{tabular}
+	\end{center}
 \end{enumerate}
-
+Es fácil verificar que las  valencias determinan el grafo.
 
 
 \item Encuentre una función del grafo $A$ al $B$ que preserve valencias. ¿Es un isomorfismo?.
@@ -464,10 +751,11 @@ Sin embargo, no hay forma de dibujar $K_5$ sin cruces entre las aristas. La demo
 	\end{tikzpicture}
 \end{tabular}
 
-
+\rta Todos los vértices tienen valencia 3 en ambos grafos, así que cualquier función biyectiva entre los vértices del primer grafo y los vértices del segundo preserva valencias. Sin embargo, ninguna de estas funciones es un isomorfismo de grafos, pues el primer grafo tiene un 5-ciclo y el segundo no lo tiene.
 
 \item Pruebe que si $G$ es un grafo con más de un vértice, entonces existen dos vértices con la misma valencia.
 
+\rta Sea $G$ un grafo tiene $n$ vértices con $n >1$, entonces como de cada vértice pueden salir como máximo $n-1$ aristas, las  valencias pueden ser $0, 1, 2,\ldots,n-1$. Supongamos primero que en el grafo  no hay vértices con valencia 0, por lo tanto, las valencias posibles son $1, 2,\ldots,n-1$ que son $n-1$ números y como tenemos $n$ vértices, por el principio de las casillas hay una valencia que se repite. Si $G$ tiene dos vértices con valencia 0, entonces se repite una valencia y listo. Nos queda el caso  de que hay un solo vértice de valencia 0. Si consideramos el subgrafo que se obtiene eliminando el vértice de valencia 0, obtenemos un grafo de $n-1$ vértices y cuyas valencias están en el rango $1, 2,\ldots,n-2$, es decir $n-2$ valores posibles. Por lo tanto, uno de los valores de las valencias se repite. 
 
 
 \item Si $G=(V,E)$ grafo,  el \textit{grafo complemento}  es $G' = (V,E')$, donde $E'$ son todos los 2-subconjuntos de $V$ que no están en $E$. Es decir, el grafo complemento tiene los mismos vértices que el grafo original y todas las aristas que le faltan a $G$ para ser grafo completo. 
@@ -512,11 +800,48 @@ Sin embargo, no hay forma de dibujar $K_5$ sin cruces entre las aristas. La demo
 	
 	\end{tikzpicture}
 	
+	\rta
 	
+		\begin{tikzpicture}[scale=1]
+	
+	\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+	
+	\draw (-0.8,0) node {(a)};
+	\Vertex[x=0,y=0]{A}
+	\Vertex[x=0,y=-1]{B}
+	
+	\draw (1.2,0) node {(b)};
+	\Vertex[x=2,y=0]{A}
+	\Vertex[x=3,y=-0.5]{B}
+	\Vertex[x=2,y=-1]{C}
+	
+	\draw (4.2,0) node {(b)};
+	\Vertex[x=5,y=0]{A}
+	\Vertex[x=6.5,y=0]{B}
+	\Vertex[x=6.5,y=-1.5]{C}
+	\Vertex[x=5,y=-1.5]{D}
+	\Edges(B,D)
+	
+	\draw (7.2,0) node {(b)};
+	\Vertex[x=8,y=-1]{A}
+	\Vertex[x=9.5,y=0]{B}
+	\Vertex[x=11,y=0]{C}
+	\Vertex[x=12.5,y=-1]{D}
+	\Vertex[x=11,y=-2]{E}
+	\Vertex[x=9.5,y=-2]{F}
+	\Edges(A,D,A,E)
+	\Edges(B,E,B,D,F)
+	\Edges(F,C)
+	
+	\end{tikzpicture}
 	
 	\medskip
 	
 	\item  Si $V=\{ v_1 \dots v_n \} $ y $\delta (v_i)=d_i \;\;\forall\,\; i=1,\dots , n\,$, calcule las valencias de el grafo complemento.
+	
+	\rta 
+	
+	Si $v$ vértice del grafo con valencia $\delta(v)=k$, por definición de grafo complemento la valencia de $v$ en el grafo complemento es $n-1 -k$. Por lo tanto si denotamos $\delta'(v)$ la valencia de $v$ en el grafo complemento, la respuesta del ejercicio es $\delta' (v_i)=n-1-d_i \;\;\forall\,\; i=1,\dots , n\,$.
 \end{enumerate}
 
 \medskip
@@ -559,24 +884,21 @@ Sin embargo, no hay forma de dibujar $K_5$ sin cruces entre las aristas. La demo
 	\end{tikzpicture}
 \end{tabular}
 
-
+\rta Los grafos no son isomorfos pues el primero tiene un 3-ciclo y el segundo no lo tiene. 
 
 \medskip
 
-\item
-
-Dados los siguientes grafos:
-
+\item Dados los siguientes grafos:
 
 \begin{tikzpicture}[scale=0.8]
-\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+%\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
 
 \draw (-0.8,0.2) node {(1)};
-\Vertex[x=0,y=-1.5]{A}
-\Vertex[x=1.5,y=0]{B}
-\Vertex[x=3,y=-1.5]{C}
-\Vertex[x=1.5,y=-3]{D}
-\Vertex[x=1.5,y=-1.5]{E}
+\Vertex[x=0,y=-1.5, L=$a$]{A} %\draw (-0.50,-1.5) node {$a$};
+\Vertex[x=1.5,y=0, L=$b$]{B}  %\draw (1,0) node {$b$};
+\Vertex[x=3,y=-1.5, L=$c$]{C}
+\Vertex[x=1.5,y=-3, L=$d$]{D}
+\Vertex[x=1.5,y=-1.5, L=$e$]{E}
 \Edges(A,B,C,D,A)
 \Edges(A,E,C)
 \Edges(B,E,D)
@@ -599,10 +921,12 @@ Dados los siguientes grafos:
 \Vertex[x=4+10.8,y=-2.4]{5}
 \Vertex[x=1+10.8,y=-3.6]{6}
 \Vertex[x=3+10.8,y=-3.6]{7}
-\Vertex[x=2+10.8,y=-4.8]{8}
+\Vertex[x=2+10.8,y=-3.8]{8}
 \Edges(1,6,8,7,1)
 \Edges(3,2,7,8,6,4,5)
+\end{tikzpicture} 
 
+\begin{tikzpicture}[scale=0.8]
 \draw (-0.8,-5.5) node {(4)};
 \Vertex[x=0+0.2,y=0-5.9]{1}
 \Vertex[x=3+0.2,y=0-5.9]{2}
@@ -613,31 +937,32 @@ Dados los siguientes grafos:
 \Edges(2,4,1,3)
 
 \draw (4.2,-5.3) node {(5)};
-\Vertex[x=0+5,y=-1.5-5.9]{A}
-\Vertex[x=1.5+5,y=0-5.9]{B}
-\Vertex[x=3+5,y=-1.5-5.9]{C}
-\Vertex[x=1.5+5,y=-3-5.9]{D}
-\Vertex[x=1.5+5,y=-1.5-5.9]{E}
+\Vertex[x=0+5,y=-1.5-5.9, L=$a$]{A}
+\Vertex[x=1.5+5,y=0-5.9, L=$b$]{B}
+\Vertex[x=3+5,y=-1.5-5.9, L=$c$]{C}
+\Vertex[x=1.5+5,y=-3-5.9, L=$d$]{D}
+\Vertex[x=1.5+5,y=-1.5-5.9, L=$e$]{E}
 \Edges(A,B,C,D,A)
 \Edges(A,E,C)
 
 
 \draw (10,-5.3) node {(6)};
-\Vertex[x=0+5+5.8,y=-1.5-5.9]{A}
-\Vertex[x=1.5+5+5.8,y=0-5.9]{B}
-\Vertex[x=3+5+5.8,y=-1.5-5.9]{C}
-\Vertex[x=1.5+5+5.8,y=-3-5.9]{D}
-\Vertex[x=1.5+5+5.8,y=-1.5-5.9]{E}
+\Vertex[x=0+5+5.8,y=-1.5-5.9, L=$a$]{A}
+\Vertex[x=1.5+5+5.8,y=0-5.9, L=$b$]{B}
+\Vertex[x=3+5+5.8,y=-1.5-5.9, L=$c$]{C}
+\Vertex[x=1.5+5+5.8,y=-3-5.9, L=$d$]{D}
+\Vertex[x=1.5+5+5.8,y=-1.5-5.9, L=$e$]{E}
 \Edges(A,B,C,E,A,D,E)
+\end{tikzpicture} 
 
-
+\begin{tikzpicture}[scale=0.7]
 \draw (-0.8,-10) node {(7)};
 \Vertex[x=2,y=-11]{1}
 \Vertex[x=4,y=-11]{2}
 \Vertex[x=6,y=-11]{3}
 \Vertex[x=0,y=-13]{4}
 \Vertex[x=5,y=-14]{5}
-\Vertex[x=6.5,y=-13]{6}
+\Vertex[x=6.3,y=-13]{6}
 \Vertex[x=2,y=-15]{7}
 \Vertex[x=8,y=-15]{8}
 \Vertex[x=3,y=-16]{9}
@@ -653,102 +978,205 @@ Dados los siguientes grafos:
 
 \begin{enumerate}
 	\item Determine en cada caso si existen subgrafos completos de más de 2 vértices.
+	
+	\rta En (1) hay varios $K_3$: $abe$, $bec$, $aed$, $ecd$. En (2) El subgrafo con vértices $1,2,3,4$  es un $K_4$. En (3) no hay grafos completos. En (4) hay varios subrafos isomorfos s $K_3$, por ejemplo el formado por los vértices $1,4,5$. En (5) no hay subgrafos completos. En (6) hay un $K_3$ formado por los vértices $a,e,d$. En (7) no hay grafos completos. 
+	
 	\item Para el grafo (1), dé todos los caminos que unen $a$ con $b$.
-	\item Dé caminatas eulerianas que unan $a$ con $b$ en los grafos (2), (3) y (4).
-	\item Para (5) y (6), decir si existen ciclos hamiltonianos partiendo de $a$.
+	
+	\rta $ab$, $adcb$, $adeb$, $adceb$, $adecb$, $aeb$, $aecb$, $aedcb$.  
+	
+	
+	\item Dé caminatas eulerianas en los grafos (4), (5) y (6).
+	
+	\rta  En  el  grafo (4), $\delta(2)=3$, $\delta(3)=3$ y todas las demás valencias son pares. Luego la caminata debes salir de $2$ y llegar a $3$ o viceversa. Una caminata posible es $234514213$.    
+	
+	En  el grafo (5) la caminata euleriana debe salir de $a$ y llegar a $c$ o viceversa. Una caminata posible es: $abcdaec$.
+	
+	En  el grafo (6) la caminata euleriana debe salir de $a$ y llegar a $e$ o viceversa. Una caminata posible es: $abcedae$.
+	
+	\item Para (2) y (3), decir si existen ciclos hamiltonianos.
+	
+	\rta En (2) el  ciclo $512341$ es hamiltoniano. 
+	
+	
+	En (3) no hay ciclos hamiltonianos: observemos  que un ciclo hamiltoniano puede empezar de cualquier vértice. Supongamos que (3) tiene un ciclo hamiltoniano y lo empezamos del vértice $3$. El comienzo del ciclo es $327$, luego podría ser  a) $3271$ o  b) $3278$. 
+	
+	En  el caso a) solo  puede continuar como $32716$ y  de ahí  como $327168$ o $327164$. El $327168$ solo puede continuar en $3271687$ repitiendo vértice sin ser ciclo. El  $327164$ solo puede continuar en $3271645$ y ahí terminar  sin ser ciclo. 
+	
+	En  el caso b) solo puede continuar como $32786$ y luego  como $3278645$ terminando sin ser ciclo,  o $3278617$ repitiendo vértice sin ser ciclo. 
+	
+	En  definitiva no hay ciclos hamiltonianos en (3). 
+	
 	\item Determinar cuales de los siguientes pares de grafos son isomorfos:
 	
-	(i) (4) y (2),\quad
+	(i) (4) y (2),\quad 
 	
-	(ii) (5) y (6), \quad
+	\rta (2) tiene un vértice de  valencia 1, mientras que en  (4) todas las valencias son mayores que 1, por lo tanto (2) y (4) no pueden ser isomorfos. 
 	
-	(iii) (5) y (1).
+	(ii) (5) y (6), \quad 
+	
+	\rta En este caso  la lista de valencias de ambos grafos es 2, 2, 2, 3, 3 y por lo tanto no podemos usar valencias para distinguir estos grafos. Ahora bien, en (6) tenemos el 3-ciclo $aed$, mientras que en (5) no hay 3-ciclos, por lo tanto (5) y (6) no son isomorfos.   
+	
+	(iii) (5) y (1). 
+	
+	\rta 
+	En (1) hay un vértice de valencia 4 mientras que  en (5) no lo hay, por lo tanto los grafos no son isomorfos. 
 	
 	
 	
 	\item Halle las componentes conexas del grafo (7).
 	
-	\begin{tabular}{llll}
-		$A:$ & &\qquad$B:$& \\
-		&
-		\begin{tikzpicture}[scale=1]
-		%\SetVertexSimple[Shape=circle,FillColor=white]
-		\Vertex[x=0,y=0]{A}
-		\Vertex[x=4,y=0]{B}
-		\Vertex[x=1,y=-2]{C}
-		\Vertex[x=3,y=-2]{D}
-		\Vertex[x=5,y=-2]{E}
-		\Vertex[x=1,y=-4]{F}
-		\Vertex[x=3,y=-4]{G}
-		\Vertex[x=1,y=-6]{H}
-		\Vertex[x=4,y=-6]{I}
-		\Edges(A,C,B,C,D,E,B,C,F,G,D)
-		\Edges(H,I,B)
-		
-		\end{tikzpicture}
-		&
-		& \begin{tikzpicture}[scale=1]
-		%\SetVertexSimple[Shape=circle,FillColor=white]
-		\Vertex[x=2,y=0]{1}
-		\Vertex[x=0,y=-2]{2}
-		\Vertex[x=3,y=-2]{3}
-		\Vertex[x=4,y=-2]{4}
-		\Vertex[x=5,y=-2]{5}
-		\Vertex[x=1,y=-4]{6}
-		\Vertex[x=4,y=-4]{7}
-		\Vertex[x=3,y=-6]{8}
-		\Edges(6,5,7,8,3,4,7,2,1,3)
-		\end{tikzpicture}
-	\end{tabular}
-\end{enumerate}
-
-\begin{comment}
-\medskip
-
-
-\item Sea $G=(V,E)$ un grafo conexo y sea $e \in E$. Pruebe que
-$G-\{e\}$ es conexo sí y sólo si $e$ forma parte de algún ciclo.
-
-\medskip
-
-\item  Sea $G=(V,E)$ un grafo conexo y sea $e \in
-E$. Se dice que $e$ es un {\em puente} si al quitarle a $G$ la
-arista $e$ el grafo deja de ser conexo.
-
-\vskip .3cm Considere los siguientes grafos:
-
-
-
-Determine todos los puentes en $A$ y $B$.
-
+	\rta Los subgrafos con vértices $\{1,6,12,9 \}$, $\{4,2,5 \}$ y $\{3,7,11,10,8 \}$ son las componentes conexas de (7).
+	
 
 \end{enumerate}
-\end{comment}
-
 
 
 \medskip
 
-\item Dado el siguiente grafo
+\item\label{ej-ciclo-hamiltoniano} Dado el siguiente grafo
 $$
 \begin{matrix}
 0&1&2&3&4&5&6&7&8\\ \hline
 1&0&1&0&3&0&1&0&1\\
 3&2&3&2&5&4&5&2&3\\
-5&6&7&4&&6&7&6&5\\
-7&8&&8&&8&&8&7.
+5&6&7&4& &6&7&6&5\\
+7&8& &8& &8& &8&7.
 \end{matrix}
 $$
 encuentre un ciclo hamiltoniano (si existe). Determine si existe una caminata euleriana y en caso de ser así encuentre una. 
 
+\rta En  general el  problema de encontrar ciclos hamiltonianos es difícil de resolver, pero en este caso hay una pista que nos puede ayudar: observar que los vértices pares se relacionan solamente con vértices impares y recíprocamente los vértices impares solo son adyacentes a vértices pares. Podemos graficar el grafo  poniendo todos los vértices impares en una columna a la izquierda y los pares a la derecha. Vemos como hay aristas que van de un costado al otro pero  na hay aristas dentro de la misma columna, estos grafos se llaman  \textit{bipartitos}.  
+\begin{center}
+	\begin{tikzpicture}[scale=1.2]
+	\Vertex[x=0,y=0]{1}
+	\Vertex[x=0,y=-1]{3}
+	\Vertex[x=0,y=-2]{5}
+	\Vertex[x=0,y=-3]{7}
+	\Vertex[x=5,y=1]{0}
+	\Vertex[x=5,y=0]{2}
+	\Vertex[x=5,y=-1]{4}
+	\Vertex[x=5,y=-2]{6}
+	\Vertex[x=5,y=-3]{8}
+	\Edge(0)(1) \Edge(0)(3) \Edge(0)(5) \Edge(0)(7) 
+	\Edge(1)(2) \Edge(1)(6) \Edge(1)(8)
+	\Edge(2)(3) \Edge(2)(7)
+	\Edge(3)(4) \Edge(3)(8)
+	\Edge(4)(5)
+	\Edge(5)(6) \Edge(5)(8)
+	\Edge(6)(7)
+	\Edge(7)(8)
+	\end{tikzpicture}
+\end{center}
+Ahora bien, más allá del dibujo, un ciclo hamiltoniano pasa por los 9 vértices y por lo tanto debe tener 9 aristas. Si partimos de la columna de impares (por ejemplo de 1), la primera arista va a la columna de pares, la segunda vuelve a la columna de impares, y  así sucesivamente hasta que nos damos cuenta que una arista impar debe terminar en la columna de pares. Si  partimos de la columna de pares el razonamiento es análogo y podemos concluir \textit{cualquier ciclo impar termina en la otra columna.} Por lo tanto no hay ciclos hamiltonianos. 
+
+
+Con respecto a las caminata eulerianas, como solo hay dos vértices de valencia impar (2 y 6),  hay caminatas eulerianas que van de 2 a 6 o viceversa. La cantidad de aristas total es $\frac{6\cdot 4 + 2 \cdot 3 + 2}{2} = 16$,  que debe ser el largo de la caminata. Una posible caminata es $21034567850723816$.  
 \medskip
 
+
+
 \item Un ratón intenta comer un $3\times 3\times 3$ cubo de queso. Él comienza en una esquina y come un subcubo de $1\times 1\times 1$, para luego pasar a un subcubo adyacente. ¿Podrá el ratón terminar de comer el queso en el centro?
+ \rta Podemos modelar este problema con un cubo subdividido en 2 en cada dimensión, o también como un grafo en el espacio con coordenadas $(x,y,z)$ con $0 \le x,y,z \le 2$. El grafo sería como en el siguiente dibujo, donde el vértice de partida está en gris y el vértice de llegada en negro. 
+ \begin{center}
+ 	\begin{tikzpicture}[scale=2]
+ 	\foreach \x in{0,...,2}
+ 	{   \draw (0,\x ,2) -- (2,\x ,2);
+ 		\draw (\x ,0,2) -- (\x ,2,2);
+ 		\draw (2,\x ,2) -- (2,\x ,0);
+ 		\draw (\x ,2,2) -- (\x ,2,0);
+ 		\draw (2,0,\x ) -- (2,2,\x );
+ 		\draw (0,2,\x ) -- (2,2,\x );
+ 	}
+ 	%\draw (1,0,0) node {(100)};
+ 	%\draw (0,1,0) node {(010)};
+ 	%\draw (0,0,1) node {(001)};
+ 	
+ 	\draw[gray] (0,0 ,1) -- (2,0,1);
+ 	\draw[gray] (0,0 ,0) -- (2,0,0);
+ 	\draw[gray] (0,1,0) -- (2,1,0);
+ 	\draw[gray] (0,1,0) -- (0,1,2);
+ 	\draw[gray] (0,1 ,1) -- (2,1,1);
+ 	\draw[gray] (0,0 ,1) -- (0,2,1);
+ 	\draw[gray] (1,0 ,1) -- (1,2,1); 
+ 	\draw[gray] (0,0 ,0) -- (0,2,0);
+ 	\draw[gray] (1,0 ,0) -- (1,2,0);
+ 	\draw[gray] (0,0 ,0) -- (0,0,2);
+ 	\draw[gray] (1,0 ,0) -- (1,0,2);
+ 	\draw[gray] (1,1 ,0) -- (1,1,2);
+ 	\foreach \x in{0,...,2}
+ 	{
+ 		\foreach \y in{0,...,2}
+ 		{
+ 			\foreach \z in{0,...,2}
+ 			{\draw[fill=white] (\x,\y,\z) circle (0.07cm);}
+ 		}
+ 	}
+ 	\draw[fill=gray] (0,0,2) circle (0.07cm);
+ 	\draw[fill=black] (1,1,1) circle (0.07cm);
+ 	
+ 	\end{tikzpicture}  
+ 	
+ \end{center}
+ Má allá de la representación gráfica, lo que se pregunta en el ejercicio es sobre la existencia de un \textit{camino hamiltoniano} desde $(0,0,0)$ hasta $(1,1,1)$, es decir un camino  que comience en $(0,0,0)$ pase por todos los vértices y  termine en $(1,1,1)$. Veremos que no podremos hacer el camino requerido por el ejercicio y que la forma de resolver el problema es similar a la del ejercicio \ref{ej-ciclo-hamiltoniano}.    
+ 
+ Primero definiremos un concepto muy sencillo: diremos  que una 3-upla de enteros $(x,y,z)$ es  \textit{par} si $x+y+z$ es un número par, en caso contrario diremos que es impar. 
+ Ahora bien, podemos ver el pasaje de un vértice a otro como una operación algebraica, por ejemplo, la arista que une $(0,0,2)$ con $(0,1,2)$ se obtiene sumando $(0,1,0)$ a $(0,0,2)$.  En general  para pasar de un nodo a otro debemos sumar o restar  $(1,0,0)$ o $(0,1,0)$ o $(0,0,1)$ y es claro que al hacer esta operación cambiamos la paridad del vértice. Si pasamos de $v_0$ a $v_1$ y de $v_1$ a $v_2$ ($v_0,v_1,v_2$ vértices) entonces la parida de $v_0$ es igual a la paridad de $v_2$.  A partir de esta observación podemos concluir que si partimos de un vértice par y hacemos una caminata con un número par de aristas,  entonces terminaremos en un vértice par. Ahora bien, el  ejercicio nos pregunta sobre un camino hamiltoniano desde $(0,0,0)$ hasta $(1,1,1)$. En este caso el camino hamiltoniano debería tener 26 aristas, pues pasa por 27 vértices y por lo tanto,  al partir de un vértice par,  debería terminar  en otro vértice par, sin embargo $(1,1,1)$ es un vértice impar y concluimos que  este camino hamiltoniano  no  puede existir.  
+ 
+ 
+ 
+\item Dé todos los árboles de 5 vértices no isomorfos.
+ 
+ \rta 
+ 
+Sabemos que un árbol (conexo por definición) con 5 vértices debe tener 4 aristas. Y que cualquier grafo con 4 aristas tendría un grado total (suma de todas las valencias) de 8.
+Así que nuestro problema se reduce en encontrar árboles con 5 vértices cuyo grado total sea 8, y donde, cada uno de los vértice tiene valencia $\ge 1$. Las posible configuraciones de valencias son 
+\begin{align*}
+	&1, 1, 1, 1, 4 \\
+	&1, 1, 1, 2, 3 \\
+	&1, 1, 2, 2, 2
+\end{align*}
+Veamos caso  por caso.
 
+$1, 1, 1, 1, 4$: es claro que en este caso hay un solo grafo posible,
+\begin{center}
+	\begin{tikzpicture}[scale=0.71]
+	\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+	\Vertex[x=0.00, y=0.00]{1}
+	\Vertex[x=-1., y=-2]{2}
+	\Vertex[x=-3., y=-2]{3}
+	\Vertex[x=1., y=-2]{4}
+	\Vertex[x=3., y=-2]{5}
+	\Edges(1,2,1,3,1,4,1,5)
+	\end{tikzpicture}
+\end{center}
 
-\item Dé todos los árboles de 6 vértices no isomorfos.
+$1, 1, 1, 2, 3$: se puede construir a partir del anterior ``cambiando'' una arista de lugar
+\begin{center}
+	\begin{tikzpicture}[scale=0.71]
+	\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+	\Vertex[x=0.00, y=0.00]{1}
+	\Vertex[x=-1., y=-2]{2}
+	\Vertex[x=-3., y=-2]{3}
+	\Vertex[x=1., y=-2]{4}
+	\Vertex[x=3., y=-2]{5}
+	\Edges(1,2,1,3,1,4,5)
+	\end{tikzpicture}
+\end{center}
+y vemos que no hay más.
 
-
+$1, 1, 2, 2, 2$: en este caso solo podemos tener
+\begin{center}
+	\begin{tikzpicture}[scale=0.71]
+	\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+	\Vertex[x=5, y=-2]{1}
+	\Vertex[x=-1., y=-2]{2}
+	\Vertex[x=-3., y=-2]{3}
+	\Vertex[x=1., y=-2]{4}
+	\Vertex[x=3., y=-2]{5}
+	\Edges(3,2,4,5,1)
+	\end{tikzpicture}
+\end{center}
 
 \end{enumerate}
 \end{document}
