--- a/2019-2/practicos/Practico5-2019.tex
+++ b/2019-2/practicos/Practico5-2019.tex
@@ -190,7 +190,7 @@
 
 \begin{document}
 
-{\bf \begin{center} Práctico 5 \\ Matemática Discreta I -- Año 2019 \\ FAMAF \end{center}}
+{\bf \begin{center} Práctico 5 \\ Matemática Discreta I -- Año 2019/2 \\ FAMAF \end{center}}
 
 \medskip
 
@@ -470,97 +470,99 @@ $$
 
 \item
 
-Dados los siguientes grafos:
+\item Dados los siguientes grafos:
+
+\begin{tikzpicture}[scale=0.8]
+%\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+
+\draw (-0.8,0.2) node {(1)};
+\Vertex[x=0,y=-1.5, L=$a$]{A} %\draw (-0.50,-1.5) node {$a$};
+\Vertex[x=1.5,y=0, L=$b$]{B}  %\draw (1,0) node {$b$};
+\Vertex[x=3,y=-1.5, L=$c$]{C}
+\Vertex[x=1.5,y=-3, L=$d$]{D}
+\Vertex[x=1.5,y=-1.5, L=$e$]{E}
+\Edges(A,B,C,D,A)
+\Edges(A,E,C)
+\Edges(B,E,D)
+
+\draw (4.2,0.2) node {(2)};
+\Vertex[x=5,y=-1.5]{1}
+\Vertex[x=6.5,y=0]{2}
+\Vertex[x=8.5,y=-1.5]{3}
+\Vertex[x=5.7,y=-2.5]{4}
+\Vertex[x=7.7,y=-2.7]{5}
+\Edges(1,2,3,4,1,5)
+\Edges(1,3)
+\Edges(2,4)
+
+\draw (10,0.2) node {(3)};
+\Vertex[x=12.8,y=0]{1}
+\Vertex[x=11.8,y=-1.2]{2}
+\Vertex[x=3+10.8,y=-1.2]{3}
+\Vertex[x=0+10.8,y=-2.4]{4}
+\Vertex[x=4+10.8,y=-2.4]{5}
+\Vertex[x=1+10.8,y=-3.6]{6}
+\Vertex[x=3+10.8,y=-3.6]{7}
+\Vertex[x=2+10.8,y=-3.8]{8}
+\Edges(1,6,8,7,1)
+\Edges(3,2,7,8,6,4,5)
+\end{tikzpicture} 
+
+\begin{tikzpicture}[scale=0.8]
+\draw (-0.8,-5.5) node {(4)};
+\Vertex[x=0+0.2,y=0-5.9]{1}
+\Vertex[x=3+0.2,y=0-5.9]{2}
+\Vertex[x=3+0.2,y=-3-5.9]{3}
+\Vertex[x=1.5+0.2,y=-3-5.9]{4}
+\Vertex[x=0+0.2,y=-3-5.9]{5}
+\Edges(1,2,3,4,5,1)
+\Edges(2,4,1,3)
+
+\draw (4.2,-5.3) node {(5)};
+\Vertex[x=0+5,y=-1.5-5.9, L=$a$]{A}
+\Vertex[x=1.5+5,y=0-5.9, L=$b$]{B}
+\Vertex[x=3+5,y=-1.5-5.9, L=$c$]{C}
+\Vertex[x=1.5+5,y=-3-5.9, L=$d$]{D}
+\Vertex[x=1.5+5,y=-1.5-5.9, L=$e$]{E}
+\Edges(A,B,C,D,A)
+\Edges(A,E,C)
 
 
-	\begin{tikzpicture}[scale=0.8]
-	\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
-	
-	\draw (-0.8,0.2) node {(1)};
-	\Vertex[x=0,y=-1.5]{A}
-	\Vertex[x=1.5,y=0]{B}
-	\Vertex[x=3,y=-1.5]{C}
-	\Vertex[x=1.5,y=-3]{D}
-	\Vertex[x=1.5,y=-1.5]{E}
-	\Edges(A,B,C,D,A)
-	\Edges(A,E,C)
-	\Edges(B,E,D)
+\draw (10,-5.3) node {(6)};
+\Vertex[x=0+5+5.8,y=-1.5-5.9, L=$a$]{A}
+\Vertex[x=1.5+5+5.8,y=0-5.9, L=$b$]{B}
+\Vertex[x=3+5+5.8,y=-1.5-5.9, L=$c$]{C}
+\Vertex[x=1.5+5+5.8,y=-3-5.9, L=$d$]{D}
+\Vertex[x=1.5+5+5.8,y=-1.5-5.9, L=$e$]{E}
+\Edges(A,B,C,E,A,D,E)
+\end{tikzpicture} 
 
-	\draw (4.2,0.2) node {(2)};
-	\Vertex[x=5,y=-1.5]{1}
-	\Vertex[x=6.5,y=0]{2}
-	\Vertex[x=8.5,y=-1.5]{3}
-	\Vertex[x=5.7,y=-2.5]{4}
-	\Vertex[x=7.7,y=-2.7]{5}
-	\Edges(1,2,3,4,1,5)
-	\Edges(1,3)
-	\Edges(2,4)
-	
-	\draw (10,0.2) node {(3)};
-	\Vertex[x=12.8,y=0]{1}
-	\Vertex[x=11.8,y=-1.2]{2}
-	\Vertex[x=3+10.8,y=-1.2]{3}
-	\Vertex[x=0+10.8,y=-2.4]{4}
-	\Vertex[x=4+10.8,y=-2.4]{5}
-	\Vertex[x=1+10.8,y=-3.6]{6}
-	\Vertex[x=3+10.8,y=-3.6]{7}
-	\Vertex[x=2+10.8,y=-4.8]{8}
-	\Edges(1,6,8,7,1)
-	\Edges(3,2,7,8,6,4,5)
-	
-	\draw (-0.8,-5.5) node {(4)};
-	\Vertex[x=0+0.2,y=0-5.9]{1}
-	\Vertex[x=3+0.2,y=0-5.9]{2}
-	\Vertex[x=3+0.2,y=-3-5.9]{3}
-	\Vertex[x=1.5+0.2,y=-3-5.9]{4}
-	\Vertex[x=0+0.2,y=-3-5.9]{5}
-	\Edges(1,2,3,4,5,1)
-	\Edges(2,4,1,3)
-	
-	\draw (4.2,-5.3) node {(5)};
-	\Vertex[x=0+5,y=-1.5-5.9]{A}
-	\Vertex[x=1.5+5,y=0-5.9]{B}
-	\Vertex[x=3+5,y=-1.5-5.9]{C}
-	\Vertex[x=1.5+5,y=-3-5.9]{D}
-	\Vertex[x=1.5+5,y=-1.5-5.9]{E}
-	\Edges(A,B,C,D,A)
-	\Edges(A,E,C)
-
-	
-	\draw (10,-5.3) node {(6)};
-	\Vertex[x=0+5+5.8,y=-1.5-5.9]{A}
-	\Vertex[x=1.5+5+5.8,y=0-5.9]{B}
-	\Vertex[x=3+5+5.8,y=-1.5-5.9]{C}
-	\Vertex[x=1.5+5+5.8,y=-3-5.9]{D}
-	\Vertex[x=1.5+5+5.8,y=-1.5-5.9]{E}
-	\Edges(A,B,C,E,A,D,E)
-	
-	
-	\draw (-0.8,-10) node {(7)};
-	\Vertex[x=2,y=-11]{1}
-	\Vertex[x=4,y=-11]{2}
-	\Vertex[x=6,y=-11]{3}
-	\Vertex[x=0,y=-13]{4}
-	\Vertex[x=5,y=-14]{5}
-	\Vertex[x=6.5,y=-13]{6}
-	\Vertex[x=2,y=-15]{7}
-	\Vertex[x=8,y=-15]{8}
-	\Vertex[x=3,y=-16]{9}
-	\Vertex[x=7,y=-16]{10}
-	\Vertex[x=3,y=-18]{11}
-	\Vertex[x=5,y=-18]{12}
-	\Edges(1,6,12,9,1)
-	\Edges(4,2,5)
-	\Edges(3,7,11,10,8,3)
-	\end{tikzpicture} 
+\begin{tikzpicture}[scale=0.7]
+\draw (-0.8,-10) node {(7)};
+\Vertex[x=2,y=-11]{1}
+\Vertex[x=4,y=-11]{2}
+\Vertex[x=6,y=-11]{3}
+\Vertex[x=0,y=-13]{4}
+\Vertex[x=5,y=-14]{5}
+\Vertex[x=6.3,y=-13]{6}
+\Vertex[x=2,y=-15]{7}
+\Vertex[x=8,y=-15]{8}
+\Vertex[x=3,y=-16]{9}
+\Vertex[x=7,y=-16]{10}
+\Vertex[x=3,y=-18]{11}
+\Vertex[x=5,y=-18]{12}
+\Edges(1,6,12,9,1)
+\Edges(4,2,5)
+\Edges(3,7,11,10,8,3)
+\end{tikzpicture} 
 
 
 
 \begin{enumerate}
 \item Determine en cada caso si existen subgrafos completos de más de 2 vértices.
 \item Para el grafo (1), dé todos los caminos que unen $a$ con $b$.
-\item Dé caminatas eulerianas que unan $a$ con $b$ en los grafos (2), (3) y (4).
-\item Para (5) y (6), decir si existen ciclos hamiltonianos partiendo de $a$.
+\item Dé caminatas eulerianas en los grafos (4), (5) y (6).
+\item Para (2) y (3), decir si existen ciclos hamiltonianos.
 \item Determinar cuales de los siguientes pares de grafos son isomorfos:
 
  (i) (4) y (2),\quad
@@ -572,65 +574,7 @@ Dados los siguientes grafos:
 
 
 \item Halle las componentes conexas del grafo (7).
-
-\begin{tabular}{llll}
-	$A:$ & &\qquad$B:$& \\
-	&
-	\begin{tikzpicture}[scale=1]
-	%\SetVertexSimple[Shape=circle,FillColor=white]
-	\Vertex[x=0,y=0]{A}
-	\Vertex[x=4,y=0]{B}
-	\Vertex[x=1,y=-2]{C}
-	\Vertex[x=3,y=-2]{D}
-	\Vertex[x=5,y=-2]{E}
-	\Vertex[x=1,y=-4]{F}
-	\Vertex[x=3,y=-4]{G}
-	\Vertex[x=1,y=-6]{H}
-	\Vertex[x=4,y=-6]{I}
-	\Edges(A,C,B,C,D,E,B,C,F,G,D)
-	\Edges(H,I,B)
-	
-	\end{tikzpicture}
-	&
-	& \begin{tikzpicture}[scale=1]
-	%\SetVertexSimple[Shape=circle,FillColor=white]
-	\Vertex[x=2,y=0]{1}
-	\Vertex[x=0,y=-2]{2}
-	\Vertex[x=3,y=-2]{3}
-	\Vertex[x=4,y=-2]{4}
-	\Vertex[x=5,y=-2]{5}
-	\Vertex[x=1,y=-4]{6}
-	\Vertex[x=4,y=-4]{7}
-	\Vertex[x=3,y=-6]{8}
-	\Edges(6,5,7,8,3,4,7,2,1,3)
-	\end{tikzpicture}
-\end{tabular}
-\end{enumerate}
-
-\begin{comment}
-\medskip
-
-
-\item Sea $G=(V,E)$ un grafo conexo y sea $e \in E$. Pruebe que
-$G-\{e\}$ es conexo sí y sólo si $e$ forma parte de algún ciclo.
-
-\medskip
-
-\item  Sea $G=(V,E)$ un grafo conexo y sea $e \in
-E$. Se dice que $e$ es un {\em puente} si al quitarle a $G$ la
-arista $e$ el grafo deja de ser conexo.
-
-\vskip .3cm Considere los siguientes grafos:
-
-
-
-Determine todos los puentes en $A$ y $B$.
-
-
-\end{enumerate}
-\end{comment}
-
-
+\end{enumerate} 
 
 \medskip
 
@@ -651,7 +595,7 @@ encuentre un ciclo hamiltoniano (si existe). Determine si existe una caminata eu
 \item Un ratón intenta comer un $3\times 3\times 3$ cubo de queso. Él comienza en una esquina y come un subcubo de $1\times 1\times 1$, para luego pasar a un subcubo adyacente. ¿Podrá el ratón terminar de comer el queso en el centro?
 
 
-\item Dé todos los árboles de 6 vértices no isomorfos.
+\item Dé todos los árboles de 5 vértices no isomorfos.
 
 
 
